--- a/src/com/timeOrganizer/view/PersonOverview.fxml
+++ b/src/com/timeOrganizer/view/PersonOverview.fxml
@@ -47,7 +47,6 @@
                                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
                                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
                                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
                             </rowConstraints>
                             <children>
                                 <Label prefHeight="17.0" prefWidth="124.0" text="First Name"/>
@@ -56,12 +55,9 @@
                                 <Label text="Last Name" GridPane.rowIndex="1"/>
                                 <Label fx:id="lastNameLabel" styleClass="label-bright" text="Label"
                                        GridPane.columnIndex="1" GridPane.rowIndex="1"/>
-                                <Label text="City" GridPane.rowIndex="2"/>
-                                <Label fx:id="cityLabel" styleClass="label-bright" text="Label" GridPane.columnIndex="1"
-                                       GridPane.rowIndex="2"/>
-                                <Label text="Birthday" GridPane.rowIndex="3"/>
-                                <Label fx:id="birthdayLabel" styleClass="label-bright" text="Label"
-                                       GridPane.columnIndex="1" GridPane.rowIndex="3"/>
+                                <Label text="Email" GridPane.rowIndex="2"/>
+                                <Label fx:id="emailLabel" styleClass="label-bright" text="Label"
+                                       GridPane.columnIndex="1" GridPane.rowIndex="2"/>
                             </children>
                         </GridPane>
                         <ButtonBar layoutX="152.0" layoutY="338.0" prefHeight="40.0" prefWidth="200.0"
