--- a/src/com/timeOrganizer/view/AdventureOverview.fxml
+++ b/src/com/timeOrganizer/view/AdventureOverview.fxml
@@ -12,20 +12,20 @@
 <?import javafx.scene.layout.RowConstraints?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" stylesheets="@DarkTheme.css" xmlns="http://javafx.com/javafx/9.0.1"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.timeOrganizer.view.PersonOverviewController">
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.timeOrganizer.view.AdventureOverviewController">
     <children>
-        <SplitPane dividerPositions="0.29797979797979796" layoutX="136.0" layoutY="98.0" prefHeight="400.0"
-                   prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+        <SplitPane dividerPositions="0.44166666666666665" layoutX="136.0" layoutY="98.0" prefHeight="417.0"
+                   prefWidth="620.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
                    AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <items>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                     <children>
-                        <TableView fx:id="personTable" layoutX="-12.0" layoutY="49.0" prefHeight="200.0"
-                                   prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+                        <TableView fx:id="adventureTable" layoutX="-12.0" layoutY="49.0" prefHeight="399.0"
+                                   prefWidth="306.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
                                    AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                             <columns>
-                                <TableColumn fx:id="firstNameColumn" prefWidth="75.0" text="First Name"/>
-                                <TableColumn fx:id="lastNameColumn" prefWidth="75.0" text="Last Name"/>
+                                <TableColumn fx:id="adventureNameColumn" prefWidth="44.0" text="Name"/>
+                                <TableColumn fx:id="adventureAddressColumn" prefWidth="121.0" text="Address"/>
                             </columns>
                             <columnResizePolicy>
                                 <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
@@ -35,7 +35,7 @@
                 </AnchorPane>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" styleClass="background">
                     <children>
-                        <Label layoutX="27.0" layoutY="14.0" styleClass="label-header" text="Person Details"
+                        <Label layoutX="27.0" layoutY="14.0" styleClass="label-header" text="Adventure Details"
                                AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="15.0"/>
                         <GridPane layoutX="66.0" layoutY="127.0" AnchorPane.leftAnchor="20.0"
                                   AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="100.0">
@@ -49,14 +49,14 @@
                                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
                             </rowConstraints>
                             <children>
-                                <Label prefHeight="17.0" prefWidth="124.0" text="First Name"/>
-                                <Label fx:id="firstNameLabel" styleClass="label-bright" text="Label"
+                                <Label prefHeight="17.0" prefWidth="124.0" text="Date"/>
+                                <Label fx:id="adventureDateLabel" styleClass="label-bright" text="Label"
                                        GridPane.columnIndex="1"/>
-                                <Label text="Last Name" GridPane.rowIndex="1"/>
-                                <Label fx:id="lastNameLabel" styleClass="label-bright" text="Label"
+                                <Label text="Name" GridPane.rowIndex="1"/>
+                                <Label fx:id="adventureNameLabel" styleClass="label-bright" text="Label"
                                        GridPane.columnIndex="1" GridPane.rowIndex="1"/>
-                                <Label text="Email" GridPane.rowIndex="2"/>
-                                <Label fx:id="emailLabel" styleClass="label-bright" text="Label"
+                                <Label text="Address" GridPane.rowIndex="2"/>
+                                <Label fx:id="adventureAddressLabel" styleClass="label-bright" text="Label"
                                        GridPane.columnIndex="1" GridPane.rowIndex="2"/>
                             </children>
                         </GridPane>
