--- a/src/com/timeOrganizer/view/AdventureOverview.fxml
+++ b/src/com/timeOrganizer/view/AdventureOverview.fxml
@@ -60,13 +60,14 @@
                                        GridPane.columnIndex="1" GridPane.rowIndex="2"/>
                             </children>
                         </GridPane>
-                        <ButtonBar layoutX="152.0" layoutY="338.0" prefHeight="40.0" prefWidth="200.0"
+                        <ButtonBar layoutX="152.0" layoutY="338.0" prefHeight="40.0" prefWidth="308.0"
                                    AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="20.0">
                             <buttons>
-                                <Button mnemonicParsing="false" text="New..."/>
-                                <Button layoutX="135.0" layoutY="18.0" mnemonicParsing="false" text="Edit..."/>
-                                <Button layoutX="50.0" layoutY="18.0" mnemonicParsing="false"
-                                        onAction="#handleDeletePerson" text="Delete"/>
+                                <Button fx:id="allAdventuresButton" mnemonicParsing="false"
+                                        onAction="#allAdventuresButtonClicked" prefHeight="33.0" prefWidth="144.0"
+                                        text="All"/>
+                                <Button fx:id="myAdventuresButton" layoutX="135.0" layoutY="18.0"
+                                        mnemonicParsing="false" onAction="#myAdventuresButtonClicked" text="My"/>
                             </buttons>
                         </ButtonBar>
                     </children>
