Login Start Friends Adventures Back, Prapared statement for friends and my adventures

--- a/src/com/timeOrganizer/view/PersonOverview.fxml
+++ b/src/com/timeOrganizer/view/PersonOverview.fxml
@@ -60,13 +60,16 @@
                                        GridPane.columnIndex="1" GridPane.rowIndex="2"/>
                             </children>
                         </GridPane>
-                        <ButtonBar layoutX="152.0" layoutY="338.0" prefHeight="40.0" prefWidth="200.0"
+                        <ButtonBar layoutX="152.0" layoutY="338.0" prefHeight="40.0" prefWidth="397.0"
                                    AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="20.0">
                             <buttons>
-                                <Button mnemonicParsing="false" text="New..."/>
-                                <Button layoutX="135.0" layoutY="18.0" mnemonicParsing="false" text="Edit..."/>
-                                <Button layoutX="50.0" layoutY="18.0" mnemonicParsing="false"
-                                        onAction="#handleDeletePerson" text="Delete"/>
+                                <Button fx:id="allPersonsButton" mnemonicParsing="false"
+                                        onAction="#allPersonsButtonClicked" prefHeight="33.0" prefWidth="148.0"
+                                        text="All"/>
+                                <Button fx:id="myPersonsButton" layoutX="135.0" layoutY="18.0" mnemonicParsing="false"
+                                        onAction="#myPersonsButtonClicked" text="My"/>
+                                <Button fx:id="backButton" layoutX="50.0" layoutY="18.0" mnemonicParsing="false"
+                                        onAction="#backButtonClicked" text="Back"/>
                             </buttons>
                         </ButtonBar>
                     </children>
