--- a/src/com/timeOrganizer/view/AdventureOverview.fxml
+++ b/src/com/timeOrganizer/view/AdventureOverview.fxml
@@ -60,14 +60,17 @@
                                        GridPane.columnIndex="1" GridPane.rowIndex="2"/>
                             </children>
                         </GridPane>
-                        <ButtonBar layoutX="152.0" layoutY="338.0" prefHeight="40.0" prefWidth="308.0"
+                        <ButtonBar layoutX="152.0" layoutY="338.0" prefHeight="154.0" prefWidth="308.0"
                                    AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="20.0">
                             <buttons>
                                 <Button fx:id="allAdventuresButton" mnemonicParsing="false"
-                                        onAction="#allAdventuresButtonClicked" prefHeight="33.0" prefWidth="144.0"
+                                        onAction="#allAdventuresButtonClicked" prefHeight="59.0" prefWidth="144.0"
                                         text="All"/>
                                 <Button fx:id="myAdventuresButton" layoutX="135.0" layoutY="18.0"
-                                        mnemonicParsing="false" onAction="#myAdventuresButtonClicked" text="My"/>
+                                        mnemonicParsing="false" onAction="#myAdventuresButtonClicked" prefHeight="60.0"
+                                        text="My"/>
+                                <Button fx:id="backButton" mnemonicParsing="false" onAction="#backButtonClicked"
+                                        prefHeight="60.0" text="Back"/>
                             </buttons>
                         </ButtonBar>
                     </children>
