--- a/src/com/timeOrganizer/view/AdventureOverview.fxml
+++ b/src/com/timeOrganizer/view/AdventureOverview.fxml
@@ -6,12 +6,13 @@
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" stylesheets="@DarkTheme.css" xmlns="http://javafx.com/javafx/9.0.1"
+<AnchorPane prefHeight="648.0" prefWidth="927.0" stylesheets="@DarkTheme.css" xmlns="http://javafx.com/javafx/9.0.1"
             xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.timeOrganizer.view.AdventureOverviewController">
     <children>
         <SplitPane dividerPositions="0.44166666666666665" layoutX="136.0" layoutY="98.0" prefHeight="417.0"
@@ -47,6 +48,7 @@
                                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
                                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
                                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
                             </rowConstraints>
                             <children>
                                 <Label prefHeight="17.0" prefWidth="124.0" text="Date"/>
@@ -58,9 +60,12 @@
                                 <Label text="Address" GridPane.rowIndex="2"/>
                                 <Label fx:id="adventureAddressLabel" styleClass="label-bright" text="Label"
                                        GridPane.columnIndex="1" GridPane.rowIndex="2"/>
+                                <Label text="Id" GridPane.rowIndex="3"/>
+                                <Label fx:id="adventureIdLabel" styleClass="label-bright" text="Label"
+                                       GridPane.columnIndex="1" GridPane.rowIndex="3"/>
                             </children>
                         </GridPane>
-                        <ButtonBar layoutX="152.0" layoutY="338.0" prefHeight="154.0" prefWidth="308.0"
+                        <ButtonBar layoutX="152.0" layoutY="338.0" prefHeight="154.0" prefWidth="495.0"
                                    AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="20.0">
                             <buttons>
                                 <Button fx:id="allAdventuresButton" mnemonicParsing="false"
@@ -69,10 +74,16 @@
                                 <Button fx:id="myAdventuresButton" layoutX="135.0" layoutY="18.0"
                                         mnemonicParsing="false" onAction="#myAdventuresButtonClicked" prefHeight="60.0"
                                         text="My"/>
+                                <Button fx:id="addAdventureButton" mnemonicParsing="false"
+                                        onAction="#addAdventureButtonClicked" prefHeight="60.0" text="Add"/>
+                                <Button fx:id="deleteAdventureButton" mnemonicParsing="false"
+                                        onAction="#deleteAdventureButtonClicked" prefHeight="62.0" text="Delete"/>
                                 <Button fx:id="backButton" mnemonicParsing="false" onAction="#backButtonClicked"
                                         prefHeight="60.0" text="Back"/>
                             </buttons>
                         </ButtonBar>
+                        <TextField fx:id="adventureIdTextField" layoutX="247.0" layoutY="448.0"/>
+                        <Label layoutX="53.0" layoutY="431.0" text="Adventure ID"/>
                     </children>
                 </AnchorPane>
             </items>
