--- a/src/com/timeOrganizer/view/LogIn.fxml
+++ b/src/com/timeOrganizer/view/LogIn.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121"
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/9.0.1"
             xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.timeOrganizer.view.LogInController">
     <children>
         <SplitPane dividerPositions="0.5" prefHeight="160.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0"
@@ -34,7 +34,8 @@
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                     <children>
                         <Button fx:id="OrganizerLogInButton" layoutX="84.0" layoutY="174.0" mnemonicParsing="false"
-                                prefHeight="25.0" prefWidth="129.0" text="Organizer log in">
+                                onAction="#organizerLogInButtonClicked" prefHeight="25.0" prefWidth="129.0"
+                                text="Organizer log in">
                             <font>
                                 <Font size="16.0"/>
                             </font>
