--- a/src/com/timeOrganizer/view/PersonOverview.fxml
+++ b/src/com/timeOrganizer/view/PersonOverview.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -33,7 +34,7 @@
                         </TableView>
                     </children>
                 </AnchorPane>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" styleClass="background">
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="399.0" prefWidth="502.0" styleClass="background">
                     <children>
                         <Label layoutX="27.0" layoutY="14.0" styleClass="label-header" text="Person Details"
                                AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="15.0"/>
@@ -68,10 +69,16 @@
                                         text="All"/>
                                 <Button fx:id="myPersonsButton" layoutX="135.0" layoutY="18.0" mnemonicParsing="false"
                                         onAction="#myPersonsButtonClicked" text="My"/>
+                                <Button fx:id="addToMyButton" mnemonicParsing="false" onAction="#addToMyButtonClicked"
+                                        text="Add to my"/>
+                                <Button fx:id="deleteButton" mnemonicParsing="false" onAction="#deleteButtonClicked"
+                                        text="Delete"/>
                                 <Button fx:id="backButton" layoutX="50.0" layoutY="18.0" mnemonicParsing="false"
                                         onAction="#backButtonClicked" text="Back"/>
                             </buttons>
                         </ButtonBar>
+                        <TextField fx:id="newFriendEmailTextField" layoutX="209.0" layoutY="276.0"/>
+                        <Label layoutX="20.0" layoutY="259.0" text="New Friend Email"/>
                     </children>
                 </AnchorPane>
             </items>
