--- a/src/com/timeOrganizer/view/StartView.fxml
+++ b/src/com/timeOrganizer/view/StartView.fxml
@@ -9,8 +9,8 @@
             xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="com.timeOrganizer.view.StartViewController">
     <children>
-        <VBox prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="200.0"
-              AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="150.0">
+        <VBox layoutY="79.0" prefHeight="321.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0"
+              AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="79.0">
             <children>
                 <Button fx:id="friendsButton" mnemonicParsing="false" onAction="#friendsButtonClicked" prefWidth="200.0"
                         stylesheets="@DarkTheme.css" text="Friends">
@@ -20,6 +20,12 @@
                 </Button>
                 <Button fx:id="adventuresButton" mnemonicParsing="false" onAction="#adventuresButtonClicked"
                         prefWidth="200.0" stylesheets="@DarkTheme.css" text="Adventures">
+                    <VBox.margin>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                    </VBox.margin>
+                </Button>
+                <Button fx:id="eventCreatorButton" mnemonicParsing="false" onAction="#adventureCreatorButtonClicked"
+                        prefHeight="33.0" prefWidth="265.0" text="Event creator">
                     <VBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
                     </VBox.margin>
